--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -10,7 +10,7 @@ body {
 
 .sidebar {
     width: 250px;
-    background-color: #333;
+    background-color: #00008B;
     color: white;
     padding: 20px;
     min-height: 100vh;
