--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -9,11 +9,11 @@ body {
 }
 
 .sidebar {
-    width: 250px;
-    background-color: #00008B;
-    color: white;
-    padding: 20px;
-    min-height: 100vh;
+    background-color: darkblue !important;
+    color: white !important;
+    width: 250px !important;
+    padding: 20px !important;
+    min-height: 100vh !important;
 }
 
 .sidebar ul {
